crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-2.stderr
TOML parse error at line 1, column 28
  |
1 | bad-uni-esc-ml-2 = """val\Ux"""
  |                            ^
too few unicode value digits, expected unicode hexadecimal value
